# scMoE

./: .gitignore  README.md  neuroendocrine.ipynb  prostate.ipynb  pyproject.toml
architecture/: MoE.py  train.py
breast_cancer/: breast interp.ipynb
interpret/: breast interp.ipynb
model/: config.json  geneorder.tsv  train_mean.npy  train_std.npy
quality control/: brain.ipynb  breast.ipynb  colorectal.ipynb  headneck.ipynb  kidney.ipynb  lung.ipynb  neuroendocrine.ipynb  ovarian.ipynb  pancreas.ipynb  sarcoma.ipynb  skin.ipynb
quality control/liver/: liver.ipynb
quality control/liver-biliary/: liver-biliary.ipynb
quality control/neuroendocrine/: neuroendocrine.ipynb
quality control/prostate/: prostate.ipynb
quality control/sarcoma/: sarcoma.ipynb
scMoE/: network.py  preprocessing.py  profiler.py
scMoE/docs/: README.md
scMoE/model/: geneorder.tsv
